--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         <center>
             <span>Hi! find me on</span>
             <span>
-                <i class="fab fa-facebook"></i> 
-                <i class="fab fa-instagram"></i> 
-                <i class="fab fa-twitter"></i>
+                <a href="javascript:void(0)"><i class="fab fa-facebook"></i></a> 
+                <a href="javascript:void(0)"><i class="fab fa-instagram"></i></a>
+                <a href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
             </span>
         </center>
     </footer>
